# coursera-agent-message-cleanup

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  coursera-agent-message-cleanup.py  coursera_agent_message_cleanup.py  pyproject.toml  setup-github.sh  test.txt  test_coursera.py  test_manual.py
