[project]
name = "coursera-agent-message-cleanup"
version = "1.3.0"
description = "Removes Coursera AI agent compliance boilerplate from copied quiz text"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "coursera",
    "cli",
    "clipboard",
    "text-cleanup",
    "academic-integrity",
    "quiz",
    "boilerplate-removal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/kitsunekode/coursera-agent-message-cleanup"
Issues = "https://github.com/kitsunekode/coursera-agent-message-cleanup/issues"

[project.scripts]
coursera-cleanup = "coursera_agent_message_cleanup:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["coursera_agent_message_cleanup"]
