[project]
name = "coursera-agent-message-cleanup"
version = "1.3.0"
description = "Removes Coursera AI agent compliance boilerplate from copied quiz text"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "coursera",
    "cli",
    "clipboard",
    "text-cleanup",
    "academic-integrity",
    "quiz",
    "boilerplate-removal",
    "ai-agent",
    "compliance",
    "education",
    "productivity",
    "pyperclip",
    "assessment",
    "e-learning",
    "text-processing",
    "automation",
    "student-tool",
    "learning-resources"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/kitsunekode/coursera-agent-message-cleanup"
Documentation = "https://github.com/kitsunekode/coursera-agent-message-cleanup#readme"
Issues = "https://github.com/kitsunekode/coursera-agent-message-cleanup/issues"
Repository = "https://github.com/kitsunekode/coursera-agent-message-cleanup.git"
Changelog = "https://github.com/kitsunekode/coursera-agent-message-cleanup/blob/main/CHANGELOG.md"

[project.scripts]
coursera-cleanup = "coursera_agent_message_cleanup:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["coursera_agent_message_cleanup"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mox
  | \.svn
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true